--- a/index.html
+++ b/index.html
@@ -152,12 +152,14 @@
     <h2>07.17.2027</h2>
     
     <div class="image-container">
-        <!-- Replace with your image URL or use base64 -->
-        <!-- <img src="YOUR_IMAGE_URL_HERE" alt="Engagement photo"> -->
+        <!-- GitHub hosted image -->
+        <img src="https://raw.githubusercontent.com/samysr805/Wedding/main/images/main.jpeg" 
+             alt="Save the Date - July 17, 2027" 
+             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         
-        <!-- Placeholder -->
-        <div class="image-placeholder">
-            Your photo will appear here
+        <!-- Fallback placeholder (shown if image fails to load) -->
+        <div class="image-placeholder" style="display: none;">
+            Image loading...
         </div>
     </div>
 
